bk_ida/gobmkida/c1/find_worm_attacks_and_defenses
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/find_worm_attacks_and_defenses/src/engine/worm.c:1303:24: error: use of undeclared identifier 'find_worm_attacks_and_defenses_libs'; did you mean 'find_worm_attacks_and_defenses'?
v12 = findlib( i, 241, find_worm_attacks_and_defenses_libs); 
                       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                       find_worm_attacks_and_defenses
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/find_worm_attacks_and_defenses/src/engine/worm.c:1192:7: note: 'find_worm_attacks_and_defenses' declared here
void  find_worm_attacks_and_defenses( ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/find_worm_attacks_and_defenses/src/engine/worm.c:1310:7: error: use of undeclared identifier 'find_worm_attacks_and_defenses_libs'
v15 = find_worm_attacks_and_defenses_libs[j / 4]; 
      ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/find_worm_attacks_and_defenses/src/obj/1/worm.o] Error 1
